Make drools-pdp work with drools and java versions compatible with current DRL rules files syntax.
Issue-ID: POLICY-4857
Change-Id: I40889288828da9aea757087e2c74004008336e41
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>